--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     runtimeOnly('com.h2database:h2')
     runtimeOnly('mysql:mysql-connector-java')
     compileOnly('org.projectlombok:lombok')
+    testCompile('org.springframework.security:spring-security-test')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
 }
